--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 
 logging.level.root=INFO
 logging.level.net.martinprobson.hdfsutil=DEBUG
-#hdfs.filesystem=file:///
-hdfs.filesystem=hdfs://10.211.55.101/
+#
+# Suppress the 'missing WINUTILS.exe' message when running on windows.
+#
+logging.level.org.apache.hadoop.util.Shell=OFF
+
+hdfs.filesystem=file:///
+#hdfs.filesystem=hdfs://10.211.55.101/
